--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      href="/fonts/Silkscreen-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
     />
-
+    <link
+      rel="preload"
+      href="/fonts/Silkscreen-Bold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
     <!-- open-graph  -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="" />
